--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "firebase-admin": "^13.6.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "pdfkit": "^0.17.2",
+    "playwright": "^1.57.0",
     "puppeteer": "^24.31.0"
   },
   "devDependencies": {
